...
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/ed_number" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_number" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:onClick="check"/>
</androidx.constraintlayout.widget.ConstraintLayout>
